translation is working well, to take care of tags,

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -1,5 +1,24 @@
 {
-    "welcome": "مرحبًا بك",
+    "login_page_title": "Let's get you set up",
+    "login_page_subtitle": "It should only take a couple of minutes to pair with your watch",
+    "log_in_to_your_account": "Log In to Your Account",
+    "welcome_back": "Welcome back!",
+    "sign_up_page_title": "أنشئ حسابك",
+    "no_credit_card_required": "لا حاجة لبطاقة ائتمان.",
+    "email_label": "البريد الإلكتروني",
+    "email_hint": "أدخل بريدك الإلكتروني",
+    "password_label": "كلمة المرور",
+    "password_hint": "أدخل كلمة المرور",
+    "confirm_password_label": "تأكيد كلمة المرور",
+    "confirm_password_hint": "أعد إدخال كلمة المرور",
+    "passwords_do_not_match": "كلمات المرور غير متطابقة",
+    "sign_up_button": "اشترك",
+    "already_have_an_account": "هل لديك حساب بالفعل؟",
+    "log_in_button": "تسجيل الدخول",
+    "weak_password_error": "كلمة المرور المقدمة ضعيفة للغاية.",
+    "email_in_use_error": "يوجد حساب بالفعل بهذا البريد الإلكتروني.",
+    "generic_error": "حدث خطأ. حاول مرة اخرى.",
+    "sign_up_with_google": " اشترك باستخدام",
     "tell_us_about_yourself": "أخبرنا عن نفسك",
     "what_is_your_name": "ما اسمك؟",
     "enter_first_name": "أدخل اسمك الأول",
@@ -13,5 +32,7 @@
     "submit": "إرسال",
     "app_name": "Naya Name",
     "tagline": "أنشئ قائمتك الخاصة!",
-    "sign_in_button": "تسجيل الدخول للبدء"
+    "sign_in_button": "تسجيل الدخول للبدء",
+    "dont_have_an_account": "ليس لديك حساب؟",
+    "sign_up": "اشترك"
 }
