--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -13,5 +13,27 @@
     "submit": "Submit",
     "app_name": "Naya Menu",
     "tagline": "Create Your Own Special Menu!",
-    "sign_in_button": "Sign in to Get Started"
+    "sign_in_button": "Sign in to Get Started",
+    "login_page_title": "Let's get you set up",
+    "login_page_subtitle": "It should only take a couple of minutes to pair with your watch",
+    "log_in_to_your_account": "Log In to Your Account",
+    "welcome_back": "Welcome back!",
+    "sign_up_page_title": "Create Your Account",
+    "no_credit_card_required": "No Credit Card required.",
+    "email_label": "Email",
+    "email_hint": "Enter your email",
+    "password_label": "Password",
+    "password_hint": "Enter your password",
+    "confirm_password_label": "Confirm Password",
+    "confirm_password_hint": "Re-enter your password",
+    "passwords_do_not_match": "Passwords do not match",
+    "sign_up_button": "Sign Up",
+    "already_have_an_account": "Already have an account?",
+    "log_in_button": "Log In",
+    "weak_password_error": "The password provided is too weak.",
+    "email_in_use_error": "An account already exists for that email.",
+    "generic_error": "An error occurred. Please try again.",
+    "sign_up_with_google": "Sign Up with Google",
+    "dont_have_an_account": "Don't have an account?",
+    "sign_up": "Sign Up"
 }
